--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Привіт, я Аня і це мій перший сайт!</h1>
     <!--Підзаоловок-->
     <h2>Про мене</h2>
-    <p>Я люблю грати в PUBG Mobile і дивитись фільми/серіали.</p>
+    <p>Я люблю грати в <strong>PUbG Mobile</strong> і дивитись фільми/серіали.</p>
     <!--Нумерований список-->
     <h2>Мої улюблені фільми/серіали</h2>
     <ol>
-        <li>Загін самогубців</li>
-        <li>Північ</li>
-        <li>Хижі пташки</li>
-        <li>Месники</li>
+        <li>"Загін самогубців"</li>
+        <li>"Північ"</li>
+        <li>"Хижі пташки"</li>
+        <li>"Месники"</li>
     </ol>
     <!--Ненумерований список-->
     <h2>Матеріал,який я поки що вивчила про HTML</h2>
@@ -28,9 +28,9 @@
         <li>Заголовки, списки та абзаци</li>
     </ul>
     <!--Зображення-->
-    <h2>Моя кішка Снєжка</h2>
+    <h2>Моя кішка Снєжка&hearts;</h2>
     <img src="snezhka.jpg" alt="Моя кішка Снєжка" width="300">
     <!--Посилання-->
-    <p>Більше інформації в <a href="https://t.me/AnnaEugenievna" target="blank">моєму Telegram</a>.</p>
+    <p>Більше інформації в моєму<a href="https://t.me/AnnaEugenievna" target="blank">Telegram</a>.</p>
 </body>
 </html>
