--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Привіт, я Аня і це мій перший сайт!</h1>
     <!--Підзаоловок-->
     <h2>Про мене</h2>
-    <p>Я люблю грати в <strong>PUbG Mobile</strong> і дивитись фільми/серіали.</p>
+    <p>Я люблю грати в <strong>PUBG Mobile</strong> і дивитись фільми/серіали.</p>
     <!--Нумерований список-->
     <h2>Мої улюблені фільми/серіали</h2>
     <ol>
@@ -34,3 +34,4 @@
     <p>Більше інформації в моєму<a href="https://t.me/AnnaEugenievna" target="blank">Telegram</a>.</p>
 </body>
 </html>
+
