--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
     <!--Заголовок-->
     <h1>Привіт, я Аня і це мій перший сайт!</h1>
+    <nav>
+        <ul>
+            <li><a href="#about">Про мене</a></li>
+            <li><a href="#contacts">Контакти</a></li>
+        </ul>
+    </nav>
     <!--Підзаоловок-->
-    <h2>Про мене</h2>
+    <h2 id="about">Про мене</h2>
     <p>Я люблю грати в <strong>PUBG Mobile</strong> і дивитись фільми/серіали.</p>
     <!--Нумерований список-->
     <h2>Мої улюблені фільми/серіали</h2>
@@ -31,7 +37,12 @@
     <h2>Моя кішка Снєжка&hearts;</h2>
     <img src="snezhka.jpg" alt="Моя кішка Снєжка" width="300">
     <!--Посилання-->
-    <p>Більше інформації в моєму<a href="https://t.me/AnnaEugenievna" target="blank">Telegram</a>.</p>
+    <h2 id="contacts">Контакти</h2>
+    <ul>
+        <li><a href="https://t.me/AnnaEugenievna" target="_blank">Telegram</a>li>
+        <li><a href="mailto:annapaschenko828@gmail.com">Електронна пошта</a></li>
+    </ul>
 </body>
 </html>
+
 
