--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
     <!--Посилання-->
     <h2 id="contacts">Контакти</h2>
     <ul>
-        <li><a href="https://t.me/AnnaEugenievna" target="_blank">Telegram</a>li>
+        <li><a href="https://t.me/AnnaEugenievna" target="_blank">Telegram</a><li>
         <li><a href="mailto:annapaschenko828@gmail.com">Електронна пошта</a></li>
     </ul>
 </body>
 </html>
+
 
 
