--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <title>Мій перший веб-сайт</title>
     <meta name="viewport" content="width=device-width">
+    <style>
+        body {
+            background-color: #ccffcc;
+            font-family: 'Times New Roman', serif;
+            h1, h2 {
+                text-align: center;
+            }
+            .special {
+                background-color: lightgreen;
+            }
+        }
+    </style>
 </head>
 <body>
     <!--Заголовок-->
@@ -28,7 +40,7 @@
     <!--Ненумерований список-->
     <h2>Матеріал,який я поки що вивчила про HTML</h2>
     <ul>
-        <li>Основи HTML</li>
+        <li>Основи <span class="special">HTML</span></li>
         <li>Структура документа</li>
         <li>Синтаксис: елементи та атрибути</li>
         <li>Заголовки, списки та абзаци</li>
@@ -44,6 +56,7 @@
     </ul>
 </body>
 </html>
+
 
 
 
